# MPV-watchalong

./: CMakeLists.txt  CMakePresets.json  CmakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mpv-watchalong.pro  test3.pro
build-help/: Linux-build.txt  Linux-nonQtCreator-build.txt  Windows-build.txt  macOS-build.txt
icons/: app-icon.icns  mpv-watchalong-app-icon.psd
